<resources>
    <!--Overall App Strings-->
    <string name="app_name">Book Exchange</string>
    <string name="action_settings">Settings</string>
    <string name="logoDescript">The App\'s Logo</string>

    <!--Home Screen Strings -->
    <string name="create">Create</string>
    <string name="logout">Logout</string>

    <!--Hard Coded examples that will be removed -->
    <string name="request">Request: Harry Potter #1</string>
    <string name="borrowing">Borrowing: Harry Potter #2</string>
    <string name="loaning">Loaning: Harry Potter #3</string>

    <string name="exchanges">My Current Exchanges</string>
    <string name="browse">Browse Available Books</string>

    <!--Hard Coded examples that will be removed -->
    <string name="bookEx1"> Harry Potter #4 </string>
    <string name="bookEx2"> Harry Potter #5 </string>
    <string name="bookEx3"> Harry Potter #6 </string>

    <string name="title_activity_create_loan">CreateLoan</string>

    <!--Loan Strings-->
    <string name="create_header">Create the loan!</string>
    <string name="choose_offer">Offer</string>
    <string name="choose_request">Request</string>
    <string name="book_info">Book name OR ISBN OR Author</string>

    <string name="choose_loan_type">Is this an offer or a request?</string>
<!--    <string name="one_week">1 week</string>
    <string name="one_month">1 month</string>
    <string name="one_semester">1 semester</string> -->

    <string name="set_date"> Choose the ending date for your loan</string>

    <string name="feedback_body">Add a description to your loan</string>
    <string name = "feedback_button">Create loan!</string>
    <string name="title_activity_status">Status</string>
    <string name="confirm_dialog">Are you sure you wish to make this loan?</string>

    <!-- Status -->
    <string name="book_title">Book: Harry Potter #1</string>
    <string name="exchange_partner"> Exchange Partner: Hannah Young</string>
    <string name="contact_info"> How to contact: hyoung@g.hmc.edu </string>
    <string name="due_date"> Due Date: May 18, 2015 </string>
    <string name="finish_button"> Mark as complete! </string>

    <!--Status alert dialog-->
    <string name="alert_message">Are you sure you wish to finish this exchange?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_book_details">BookDetails</string>

   <!--Fields for the Book Details-->
    <string name="author">Author: JK Rowling</string>
    <string name="isbn">ISBN: 82303282434</string>
    <string name="pub_year">Year of publication: 2004 </string>
    <string name="owner">Owned by: Hannah Young</string>
    <string name="loan_period">Available Until: May 18, 2015</string>
    <string name="make_request">Request this book!</string>
    <string name="title_activity_log_in">LogIn</string>

    <!--Log in stuff-->
    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>

    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>

    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="mock_server_has_token">Mock server has refresh token?</string>
    <string name="request_server_auth_code">Request server auth code?</string>
    <string name="configuration_error">Error: the value of WEB_CLIENT_ID or SERVER_BASE_URL is not  set correctly. This will cause errors when requesting a server auth code.</string>



</resources>
