<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jarthur.bookexchange.Status">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textSize="10pt">
        </TextView>

        <TextView
            android:id="@+id/otherPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange_partner"
            android:textSize="10pt">
        </TextView>

        <TextView
            android:id="@+id/contactInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_info"
            android:textSize="10pt">
        </TextView>

        <TextView
            android:id="@+id/dueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:textSize="10pt">
        </TextView>

        <Button
            android:id="@+id/finishButton"
            android:layout_height="wrap_content"
            android:text="@string/finish_button"
            android:onClick="sendFeedback"
            android:layout_width="fill_parent">
        </Button>

    </LinearLayout>

</RelativeLayout>
