<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jarthur.bookexchange.HomeScreen">

                <Button
                    android:id="@+id/createExchangeButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:textColor="#FFFFFF"
                    android:background="#906090"
                    android:onClick="openCreateExchangeActivity"/>

                <Button
                    android:id="@+id/logoutButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lines="2"
                    android:id="@+id/text2"
                    android:clickable="true"
                    android:text="@string/exchanges"
                    android:autoLink="all"
                    android:typeface="serif"
                    android:textSize="20sp" />

                    <TextView
                        android:id="@+id/ifNoUserExchanges"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="You have no current exchanges."
                        android:visibility="gone"/>


                <ListView
                    android:id="@+id/userExchangeList"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                </ListView>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lines="2"
                    android:id="@+id/browse"
                    android:clickable="true"
                    android:text="@string/browse"
                    android:autoLink="all"
                    android:typeface="serif"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/ifNoOpenExchanges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="There are no open exchanges."
                    android:visibility="gone"/>


    <ListView
                    android:id="@+id/bookList"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                </ListView>

    </LinearLayout>
